<resources>
    <string name="app_name">Toko</string>

    <string name="title_navigation_home">Trang chủ</string>
    <string name="title_navigation_dashboard">Danh mục</string>
    <string name="title_navigation_notification">Thông báo</string>
    <string name="title_navigation_account">Tài khoản</string>

    <string name="title_home">Trang chủ</string>
    <string name="title_dashboard">Danh mục</string>
    <string name="title_notification">Thông báo</string>
    <string name="title_account">Tài khoản</string>
    <string name="search_placeholder">Tìm kiếm ...</string>
    <string name="history_search">Lịch sử tìm kiếm</string>
    <string name="activity_cart_title">Giỏ hàng</string>
    <string name="login_greeting">Xin chào,</string>
    <string name="button_login">Tiếp tục</string>
    <string name="login_instruction">Đăng nhập hoặc tạo tài khoản</string>
    <string name="signup_instruction">Hãy nhập thông tin cho tài khoản của bạn</string>
    <string name="register_instruction">Chưa có tài khoản ?</string>
    <string name="button_register">Đăng kí</string>
    <string name="password">Mật khẩu</string>
    <string name="lastname">Họ</string>
    <string name="firstname">Tên</string>
    <string name="mail">Email</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="gender">Giới tính</string>
    <string name="button_back_content_description">Back</string>
    <string name="phone">Số điện thoại</string>
    <string name="forgot_password">Quên mật khẩu ?</string>
    <string name="register">Đăng kí</string>
    <string name="account_title">Thành viên Toko</string>
    <string name="account_information">Thông tin tài khoản</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="fullname">Họ và Tên</string>
    <string name="email">Email</string>
    <string name="addresses">Sổ địa chỉ</string>
    <string name="addresses_management">Quản lý sổ địa chỉ</string>
    <string name="logout">Đăng xuất</string>
    <string name="product_favorite">Sản phẩm yêu thích</string>
    <string name="more">Xem thêm</string>
    <string name="purchase_history">Lịch sử mua hàng</string>
    <string name="underline_vnd"><sup><u>đ</u></sup></string>
    <string name="trending_shopping">Xu hướng mua sắm</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="other_gender">Khác</string>
    <string name="success">Thành công!</string>
    <string name="account_created">Tài khoản của bạn đã được đăng ký</string>
    <string name="redirect">Tự động chuyển hướng sau: </string>
    <string name="remainning_second">2 giây</string>
    <string name="retrieve_password">Lấy lại mật khẩu</string>
    <string name="forgot_username">Số điện thoại</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="repeat_password">Nhập lại mật khẩu</string>

    <string-array name="city">
        <item>An Giang</item>
        <item>Bà Rịa-Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>

        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cần Thơ</item>
        <item>Cao Bằng</item>

        <item>Đà Nẵng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>

        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Nội</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>

        <item>TP. Hồ Chí Minh</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>

        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>

        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>


        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>

        <item>Thừa Thiên - Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>

    </string-array>

    <string-array name="district">
        <item>Quận 1</item>
        <item>Quận 3</item>
        <item>Quận 4</item>
        <item>Quận 5</item>
        <item>Quận 6</item>
        <item>Quận 7</item>
        <item>Quận 8</item>
        <item>Quận 9</item>
        <item>Quận 10</item>
        <item>Quận 11</item>
        <item>Quận 12</item>
        <item>Quận Bình Tân</item>
        <item>Quận Bình Thạnh</item>
        <item>Quận Gò Vấp</item>
        <item>Quận Phú Nhuận</item>
        <item>Quận Tân Bình</item>
        <item>Quận Tân Phú</item>
        <item>Huyện Bình Chánh</item>
        <item>Huyện Cần Giờ</item>
        <item>Huyện Củ Chi</item>
        <item>Huyện Hóc Môn</item>
        <item>Huyện Nhà Bè</item>
    </string-array>

    <string-array name="wards">
        <item>Phường 01</item>
        <item>Phường 04</item>
        <item>Phường 11</item>
        <item>Phường 12</item>
        <item>Phường 10</item>
    </string-array>

</resources>