<!-- activity_registration_success.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textSize="30sp"
        android:letterSpacing="0.2"

        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_created"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/success_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/signup_success"
        android:layout_marginTop="16dp"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/redirect"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/countdown_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/remainning_second"
        android:layout_marginTop="16dp"/>
</LinearLayout>
</LinearLayout>
